; ModuleID = '/home/carl/AnghaBench/tmux/extr_mode-tree.c_mode_tree_expand_current.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_mode-tree.c_mode_tree_expand_current.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mode_tree_data = type { i64, %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mode_tree_expand_current(%struct.mode_tree_data* %0) #0 {
  %2 = alloca %struct.mode_tree_data*, align 8
  store %struct.mode_tree_data* %0, %struct.mode_tree_data** %2, align 8
  %3 = load %struct.mode_tree_data*, %struct.mode_tree_data** %2, align 8
  %4 = getelementptr inbounds %struct.mode_tree_data, %struct.mode_tree_data* %3, i32 0, i32 1
  %5 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %6 = load %struct.mode_tree_data*, %struct.mode_tree_data** %2, align 8
  %7 = getelementptr inbounds %struct.mode_tree_data, %struct.mode_tree_data* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i64 %8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %28, label %15

15:                                               ; preds = %1
  %16 = load %struct.mode_tree_data*, %struct.mode_tree_data** %2, align 8
  %17 = getelementptr inbounds %struct.mode_tree_data, %struct.mode_tree_data* %16, i32 0, i32 1
  %18 = load %struct.TYPE_4__*, %struct.TYPE_4__** %17, align 8
  %19 = load %struct.mode_tree_data*, %struct.mode_tree_data** %2, align 8
  %20 = getelementptr inbounds %struct.mode_tree_data, %struct.mode_tree_data* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %18, i64 %21
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 0
  %24 = load %struct.TYPE_3__*, %struct.TYPE_3__** %23, align 8
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %24, i32 0, i32 0
  store i32 1, i32* %25, align 4
  %26 = load %struct.mode_tree_data*, %struct.mode_tree_data** %2, align 8
  %27 = call i32 @mode_tree_build(%struct.mode_tree_data* %26)
  br label %28

28:                                               ; preds = %15, %1
  ret void
}

declare dso_local i32 @mode_tree_build(%struct.mode_tree_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
